fix login alignment

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -13,6 +13,10 @@
   margin-top: 13px;
 }
 
+.login {
+  float: right;
+}
+
 .geosuggest__suggests--hidden {
   max-height: 0;
   overflow: hidden;
